# tasks-server

./: db.sqlite3  endpoints.txt  pyproject.toml
todo/: settings.py  urls.py
todo_api/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todo_api/migrations/: 0001_initial.py  0002_task_todolist_usertodolist_delete_todo_task_todolist.py  0003_rename_updated_at_task_last_updated_at_and_more.py  0004_alter_task_completed_at_alter_todolist_completed_at.py  0005_rename_todolist_task_tasklist_and_more.py  0006_itemposition.py  0007_usertasklist_position_delete_itemposition.py  0008_task_position.py  0009_sharelink.py
