[tool.poetry]
name = "tasks-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.1"
djoser = "^2.2.2"
drf-spectacular = "^0.27.2"
drf-spectacular-sidecar = "^2024.6.1"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
